--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,13 @@
     animation: linkPulse 2s ease-in-out infinite;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
 
+section[id] {
+  scroll-margin-top: calc(var(--header-height) + 24px);
+}
 *{
   margin: 0;
   padding: 0;
